--- a/Resources/views/sidebar.html.twig
+++ b/Resources/views/sidebar.html.twig
@@ -1,7 +1,7 @@
 <div class="list-group menu">
     <div class="list-group-item disabled">
         <i class="icon-heart"></i>
-        Favorites
+        {{ 'favorites_sidebar_title'|trans }}
     </div>
 
     {% for favorite in favorites %}
